<resources>
    <string name="app_name">Nearby-Locator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_location">Fetching your current location</string>
    <string name="short_location">Fetching your current location</string>
    <string name="city_location">Updating...</string>
    <string name="app_tagline">Discover \nWhats Near</string>
    <string name="end_note">Thats all for now! :)</string>

    <string name="profile_title">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="username">\@corvasbhaskar</string>
    <string name="email">developer@corvas.com</string>

    <string name="content_name">Bhaskar Acharjee</string>
    <string name="content_mobile">+91-6290594650</string>
    <string name="content_email">developer@corvas.com</string>
    <string name="content_address">Acharya Bhaban, Palashi, Barasat</string>
    <string name="content_DOB">14-04-2002</string>
    <string name="place_category1_tagline">Restaurants, Cafe to hang out in your area</string>
    <string name="place_category1"><![CDATA[Food & Drinks]]></string>
    <string name="crafted_by">Crafted with ❤️ by Bhaskar Acharjee</string>
    <string name="discover_nearby">DISCOVER NEARBY</string>
    <string name="google_maps_key">AIzaSyCMVFXS7EP4J9GTRqLfL9_ZQheI_ZsfrqQ</string>
    <string name="place_prediction_text">Auto complete places suggestion</string>

</resources>