<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.ProfileFragment"
    tools:showIn="@layout/fragment_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/headerText"
            android:layout_marginBottom="20dp"
            android:text="Account Info" />

        <RelativeLayout style="@style/profileDetailsLayout">

            <ImageView
                android:id="@+id/nameImageView"
                style="@style/profileDetailsImage"
                android:src="@drawable/ic_name" />

            <TextView
                android:id="@+id/nameTextView"
                style="@style/profileDetailsTextMain"
                android:layout_toRightOf="@id/nameImageView"
                android:text="Name" />

            <TextView
                style="@style/profileDetailsMiniText"
                android:layout_toRightOf="@id/nameImageView"
                android:text="@string/content_name" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout style="@style/profileDetailsLayout">

            <ImageView
                android:id="@+id/mobileImageView"
                style="@style/profileDetailsImage"
                android:src="@drawable/ic_mobile" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toRightOf="@id/mobileImageView"
                android:text="Mobile" />

            <TextView
                style="@style/profileDetailsMiniText"
                android:layout_toRightOf="@id/mobileImageView"
                android:text="@string/content_mobile" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout style="@style/profileDetailsLayout">

            <ImageView
                android:id="@+id/emailImageView"
                style="@style/profileDetailsImage"
                android:src="@drawable/ic_email" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toRightOf="@id/emailImageView"
                android:text="Email" />

            <TextView
                style="@style/profileDetailsMiniText"
                android:layout_toRightOf="@id/emailImageView"
                android:text="@string/content_email" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout style="@style/profileDetailsLayout">

            <ImageView
                android:id="@+id/addressImageView"
                style="@style/profileDetailsImage"
                android:src="@drawable/ic_address" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toRightOf="@id/addressImageView"
                android:text="Address" />

            <TextView
                style="@style/profileDetailsMiniText"
                android:layout_toRightOf="@id/addressImageView"
                android:text="@string/content_address" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout style="@style/profileDetailsLayout">

            <ImageView
                android:id="@+id/dobImageView"
                style="@style/profileDetailsImage"
                android:src="@drawable/ic_dob" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toRightOf="@id/dobImageView"
                android:text="D.O.B" />

            <TextView
                style="@style/profileDetailsMiniText"
                android:layout_toRightOf="@id/dobImageView"
                android:text="@string/content_DOB" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
