<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DineoutFragment">

    <ScrollView
        android:id="@+id/sv_dineout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:padding="15sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="20sp"
                            android:layout_height="20sp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5sp"
                            android:src="@drawable/icon_location">
                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/swiggy_font_medium"
                            android:paddingTop="5sp"
                            android:text="@string/city_location"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/swiggy_font_light"
                        android:text="@string/short_location"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_median"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:background="@color/black"
                android:orientation="horizontal">
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_dineout_hero"
                android:layout_width="match_parent"
                android:layout_height="345sp"
                android:src="@drawable/dineout_img_hero">
            </ImageView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350sp"
                android:layout_below="@id/iv_dineout_hero"
                android:layout_marginTop="10sp"
                android:src="@drawable/dineout_img_body">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/swiggy_font_extrabold"
                        android:text="Best offers near you"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/swiggy_font_medium"
                        android:gravity="end"
                        android:text="SEE ALL"
                        android:textColor="@color/swiggy_orange"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swiggy_font_regular"
                    android:paddingStart="10sp"
                    android:text="Restaurants to hang out in your area"
                    android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_bestoffers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:paddingBottom="15sp"></androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:background="#f1f1f4"
                android:orientation="vertical"
                android:paddingTop="20sp"
                android:paddingBottom="30sp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:paddingBottom="10sp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/grey"></View>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/swiggy_font_extrabold"
                        android:gravity="center"
                        android:letterSpacing="0.2"
                        android:text="HOTELS &amp; OFFERS"
                        android:textColor="@color/dark_grey"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1sp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/grey"></View>

                </LinearLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/dineout_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="80dp"
                    android:paddingEnd="80dp"></androidx.viewpager2.widget.ViewPager2>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:orientation="vertical"
                android:paddingBottom="20sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swiggy_font_extrabold"
                    android:padding="10sp"
                    android:text="More resturants around you"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_morearoundyou"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false">
                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f1f1f4"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30sp">

                <TextView
                    android:id="@+id/tv_hotel_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/swiggy_font_light"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/end_note"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:elevation="100sp"
        android:orientation="vertical"
        android:padding="10sp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10sp">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_gravity="center"
                android:layout_marginEnd="5sp"
                android:src="@drawable/icon_location"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/swiggy_font_medium"
                android:text="Home, "
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/swiggy_font_light"
                android:text="Chennai, Tamil Nadu"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:translationZ="1000sp"
            app:cardCornerRadius="8sp"
            app:strokeColor="#f1f1f4">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f1f1f4"
                android:padding="10sp">

                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:fontFamily="@font/swiggy_font_regular"
                    android:maxLines="1"
                    android:text="Search for "
                    android:textColor="@color/grey"
                    android:textSize="16sp"></TextView>

                <TextSwitcher
                    android:id="@+id/textSwitcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/tv_search"
                    android:ellipsize="end"
                    android:fontFamily="@font/swiggy_font_regular"
                    android:inAnimation="@anim/text_slide_to_top"
                    android:outAnimation="@anim/text_slide_from_bottom"
                    android:textColor="@color/grey" />

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_marginEnd="10sp"
                    android:layout_toStartOf="@id/iv_mic"
                    android:src="@drawable/icon_search"></ImageView>

                <ImageView
                    android:id="@+id/iv_mic"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/icon_mic"></ImageView>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</RelativeLayout>